--- a/antora-ui/src/css/breadcrumbs.css
+++ b/antora-ui/src/css/breadcrumbs.css
@@ -2,6 +2,7 @@
   display: none;
   flex: 1 1;
   padding: 0 0.5rem 0 0.75rem;
+  font-size: 0.7rem;
   line-height: var(--nav-line-height);
 }
 
